* Still need to test, but this finishes the initial support of Scancore setup in striker-installer and Install Manifest. I highly doubt it works properly yet. * Extended the Install Manifest XML to store data on the scanner databases on the dashboards. * Cleaned up some more shell_call variables in InstallManifest.pm. * I had a little white-space accident, so some stray random white-space changes may have slipped through.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -497,6 +497,15 @@
 			<input type="hidden" name="run" value="#!replace!run!#" />
 			<input type="hidden" name="task" value="#!replace!task!#" />
 			<input type="hidden" name="update_manifest" value="#!replace!update_manifest!#" />
+			
+			<input type="hidden" name="striker_user" value="#!replace!striker_user!#" />
+			<input type="hidden" name="striker_database" value="#!replace!striker_database!#" />
+			<input type="hidden" name="anvil_striker1_user" value="#!replace!anvil_striker1_user!#" />
+			<input type="hidden" name="anvil_striker1_password" value="#!replace!anvil_striker1_password!#" />
+			<input type="hidden" name="anvil_striker1_database" value="#!replace!anvil_striker1_database!#" />
+			<input type="hidden" name="anvil_striker2_user" value="#!replace!anvil_striker2_user!#" />
+			<input type="hidden" name="anvil_striker2_password" value="#!replace!anvil_striker2_password!#" />
+			<input type="hidden" name="anvil_striker2_database" value="#!replace!anvil_striker2_database!#" />
 			<br />
 		</td>
 	</tr>
