--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -736,6 +736,15 @@
 			<input type="hidden" name="task" id="task" value="create-install-manifest" />
 			<input type="hidden" name="do" id="do" value="new" />
 			<input type="hidden" name="run" id="run" value="#!replace!run!#" />
+			
+			<input type="hidden" name="striker_user" value="#!replace!striker_user!#" />
+			<input type="hidden" name="striker_database" value="#!replace!striker_database!#" />
+			<input type="hidden" name="anvil_striker1_user" value="#!replace!anvil_striker1_user!#" />
+			<input type="hidden" name="anvil_striker1_password" value="#!replace!anvil_striker1_password!#" />
+			<input type="hidden" name="anvil_striker1_database" value="#!replace!anvil_striker1_database!#" />
+			<input type="hidden" name="anvil_striker2_user" value="#!replace!anvil_striker2_user!#" />
+			<input type="hidden" name="anvil_striker2_password" value="#!replace!anvil_striker2_password!#" />
+			<input type="hidden" name="anvil_striker2_database" value="#!replace!anvil_striker2_database!#" />
 		</td>
 	</tr>
 	<tr>
