Decided to keep the messaging simple for cycling Install Target and initial testing seems to be working. More testing is needed though, but this check-in should work again.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/select-anvil.html
+++ b/html/skins/alteeve/select-anvil.html
@@ -26,7 +26,7 @@
 <br />
 <!-- end confirm-dhcpd-start -->
 
-<!-- start control-dhcpd-results -->
+<!-- start control-install-target-results -->
 <table>
 	<tr>
 		<td colspan="2" class="highlight_ready_bold">
@@ -43,7 +43,7 @@
 	</tr>
 </table>
 <br />
-<!-- end control-dhcpd-results -->
+<!-- end control-install-target-results -->
 
 <!-- start open-table -->
 <table>
