* Added the new scan-apc-ups.sql file for the scan-apc-ups scan agent. * Fixed a bug that caused re-running an Install Manifest via the 'Restart' button to corrupt the udev rules file for the network. Added a sanity check to detect malformed MAC addresses and fail before editing the udev rules file, too.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -59,18 +59,18 @@
 			<input type="hidden" name="do" value="new" />
 			<input type="hidden" name="task" value="create-install-manifest" />
 			<input type="hidden" name="perform_install" value="Install" />
-			<input type="hidden" name="anvil_node1_bcn_link1_mac" value="anvil_node1_bcn_link1_mac" />
-			<input type="hidden" name="anvil_node1_bcn_link2_mac" value="anvil_node1_bcn_link2_mac" />
-			<input type="hidden" name="anvil_node1_ifn_link1_mac" value="anvil_node1_ifn_link1_mac" />
-			<input type="hidden" name="anvil_node1_ifn_link2_mac" value="anvil_node1_ifn_link2_mac" />
-			<input type="hidden" name="anvil_node1_sn_link1_mac" value="anvil_node1_sn_link1_mac" />
-			<input type="hidden" name="anvil_node1_sn_link2_mac" value="anvil_node1_sn_link2_mac" />
-			<input type="hidden" name="anvil_node2_bcn_link1_mac" value="anvil_node2_bcn_link1_mac" />
-			<input type="hidden" name="anvil_node2_bcn_link2_mac" value="anvil_node2_bcn_link2_mac" />
-			<input type="hidden" name="anvil_node2_ifn_link1_mac" value="anvil_node2_ifn_link1_mac" />
-			<input type="hidden" name="anvil_node2_ifn_link2_mac" value="anvil_node2_ifn_link2_mac" />
-			<input type="hidden" name="anvil_node2_sn_link1_mac" value="anvil_node2_sn_link1_mac" />
-			<input type="hidden" name="anvil_node2_sn_link2_mac" value="anvil_node2_sn_link2_mac" />
+			<input type="hidden" name="anvil_node1_bcn_link1_mac" value="#!replace!anvil_node1_bcn_link1_mac!#" />
+			<input type="hidden" name="anvil_node1_bcn_link2_mac" value="#!replace!anvil_node1_bcn_link2_mac!#" />
+			<input type="hidden" name="anvil_node1_ifn_link1_mac" value="#!replace!anvil_node1_ifn_link1_mac!#" />
+			<input type="hidden" name="anvil_node1_ifn_link2_mac" value="#!replace!anvil_node1_ifn_link2_mac!#" />
+			<input type="hidden" name="anvil_node1_sn_link1_mac" value="#!replace!anvil_node1_sn_link1_mac!#" />
+			<input type="hidden" name="anvil_node1_sn_link2_mac" value="#!replace!anvil_node1_sn_link2_mac!#" />
+			<input type="hidden" name="anvil_node2_bcn_link1_mac" value="#!replace!anvil_node2_bcn_link1_mac!#" />
+			<input type="hidden" name="anvil_node2_bcn_link2_mac" value="#!replace!anvil_node2_bcn_link2_mac!#" />
+			<input type="hidden" name="anvil_node2_ifn_link1_mac" value="#!replace!anvil_node2_ifn_link1_mac!#" />
+			<input type="hidden" name="anvil_node2_ifn_link2_mac" value="#!replace!anvil_node2_ifn_link2_mac!#" />
+			<input type="hidden" name="anvil_node2_sn_link1_mac" value="#!replace!anvil_node2_sn_link1_mac!#" />
+			<input type="hidden" name="anvil_node2_sn_link2_mac" value="#!replace!anvil_node2_sn_link2_mac!#" />
 
 		</form>
 	</tr>
