* Continued work on the new 'Rack Power Control' panel. It now displays the buttons, but the 'Cycle power as soon as the nodes are off' button doesn't work yet. * Disabled a bunch of debug log entries. * Added support for caching 'passwd_script' fence option, converting it to a password for storing in cache.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -3105,6 +3105,33 @@
 			#!replace!no_access_panel!#
 		</td>
 	</tr>
+	<!-- This may not be displayed at all, which is why it is not in a preset <tr> -->
+	#!replace!watchdog_panel!#
 </table>
 <br />
 <!-- end main-page -->
+
+<!-- start watchdog_panel -->
+	<tr>
+		<td class="td_hidden">
+			<table width="100%">
+				<tr>
+					<td colspan="3">
+						<b>#!string!title_0182!#</b>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						#!string!row_0285!#
+					</td>
+					<td>
+						<a href="#!replace!immediate_cycle!#">#!string!button_0065!#</a>
+					</td>
+					<td>
+						<a href="#!replace!expire_timer!#">#!string!button_0066!#</a>
+					</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+<!-- end watchdog_panel -->
