* Finished (though more testing is needed) of the power-cycle and power-off of all devices downstream of the UPSes. This is presented as 'Power Cycle System' and 'Power Off System' buttons at the bottom of the main Striker page when "sys::use_apc_ups_watchdog = 1" is set in striker.conf. * To make the above work, a new setuid c-wrapper was make so that apache on Striker could call 'anvil-kick-apc-ups'.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -3125,10 +3125,10 @@
 						#!string!row_0285!#
 					</td>
 					<td>
-						<a href="#!replace!immediate_cycle!#">#!string!button_0065!#</a>
+						<a href="#!replace!power_cycle!#">#!string!button_0065!#</a>
 					</td>
 					<td>
-						<a href="#!replace!expire_timer!#">#!string!button_0066!#</a>
+						<a href="#!replace!power_off!#">#!string!button_0066!#</a>
 					</td>
 				</tr>
 			</table>
