*** ScanCore is still very broken ***
* The method of mapping host names to host_id in ScanCore has never sat well with me, and I couldn't shake the feeling I was being stupid in my approach to this problem. I was; The obvious correct way was to generate and store a local UUID for each host. So this commit starts the process of switching from the contrived hostname to host_id mapping to using a much more sane host_uuid stored in /etc/striker/local.uuid file. This will get added to the InstallManifest later. From an initial perspective, this converstion appears to be working in this commit.
* Did more work on testing the new bi-directional DB sync and, in 'update_db_agents()', it appears to be working much better. This commit has the pre-testing conversion in the other 'update_db_*()' functions; those will get fixed in the next commit.
* Deleted the old sync code from ScanCore itself, as well as the defunct early attempt to sync all the DB transparently. That will be revisited when a DB expert joins the party and has more insight on how to do this transparently.
* Fixed a typo in AN::Tools::String->_insert_data().

A fairly big (in purpose if not on code change) change comes to Striker in this commit!

* From here on, the more dangerous tasks (ie: powering off nodes and VM, etc) have timed command set via 'sys::actime_timeout', default is currently 180 second (three minutes). For commands that bypass the confirm step, these buttons will only work for up to three minutes after the page loads. This might be too short. For tasks with confirm (all of them, currently), the timer resets when the confirm screen is shown, so the user has 3 minutes from that point. This change was done so that, for example, confirming a cold-shutdown and then closing your browser may cause the confirmation URL to be stored in the browser. Next time you open the browser, it can reload the tab and re-confirm the cold-stop. Now, so long as 3 minutes have passed, that would abort.

Signed-off-by:

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -781,6 +781,33 @@
 <br />
 <!-- end confirm-withdrawl -->
 
+<!-- start request-expired -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_ready_bold">
+			#!replace!title!#
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="highlight_warning_bold"><b>#!string!row_0129!#</b></span>
+		</td>
+		<td>
+			<br />
+			#!replace!message!#<br /><br />
+			#!string!message_0442!#<br />
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			&nbsp;
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end request-expired -->
+
 <!-- start confirm-join-anvil -->
 <table>
 	<tr>
