*** ScanCore and scan-clustat work, other agents do not yet. ***
* Added a 'notice' level alert that fires when a scan agent adds its schema to the ScanCore DB. Added to scan-clustat and scan-bond.
* Fixed a bug in ScanCore's 'ram_used' and 'agent' table resyncs where the host_uuid wasn't used when doing the 'ram_used_id' and 'agent_id' subqueries, respectively.
* Did a lot of work to 'scan-bond', which was never finished before the changes started. It now should sync using the new N-way method, but untested. It now parses the bond data and can feed it into the database, but it can not find changes yet.
** Added a method to translate bond mode names to their numbers.
** Added a method to translate bandwidths to flat 'bps' numbers.
* Added node UUID support to InstallManifest. It now generates a UUID when an install manifest is created and uses it to set the node's host_uuid, so rebuilds of a node should keep the UUID persistent.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -654,6 +654,9 @@
 	</tr>
 	<!-- VNC Ports to Open - Not yet user-selectable. -->
 	<input type="hidden" name="anvil_open_vnc_ports" id="anvil_open_vnc_ports" value="#!replace!anvil_open_vnc_ports!#" />
+	<!-- Machine UUIDs - Not yet user-selectable. -->
+	<input type="hidden" name="anvil_node1_uuid" id="anvil_node1_uuid" value="#!replace!anvil_node1_uuid!#" />
+	<input type="hidden" name="anvil_node2_uuid" id="anvil_node2_uuid" value="#!replace!anvil_node2_uuid!#" />
 	<tr>
 		<td colspan="3">
 			&nbsp;
