--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -71,7 +71,8 @@
 			<input type="hidden" name="anvil_node2_ifn_link2_mac" value="#!replace!anvil_node2_ifn_link2_mac!#" />
 			<input type="hidden" name="anvil_node2_sn_link1_mac" value="#!replace!anvil_node2_sn_link1_mac!#" />
 			<input type="hidden" name="anvil_node2_sn_link2_mac" value="#!replace!anvil_node2_sn_link2_mac!#" />
-
+			<input type="hidden" name="rhn_user" value="#!replace!rhn_user!#" />
+			<input type="hidden" name="rhn_password" value="#!replace!rhn_password!#" />
 		</form>
 	</tr>
 	<tr>
