* Merged the 'root' and 'ricci' password fields into one when adding an Anvil! to Striker. * Disabled support for repositories in Install Manifest. * Fixed a bug where successfully disabling safe_anvil_start, ScanCore or anvil-kick-apc-ups in InstallManifest reported as failed. * Fixed a bug where all three of safe_anvil_start, ScanCore or anvil-kick-apc-ups were disabled, regardless of being enabled in an install manifest XML file.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -641,6 +641,7 @@
 		</td>
 	</tr>
 	<!-- User-defined repos -->
+	<!-- Dropping support for repos
 	<tr>
 		<td class="highlight_good_bold">
 			#!string!row_0244!#
@@ -652,6 +653,8 @@
 			&nbsp;
 		</td>
 	</tr>
+	-->
+	#!replace!say_anvil_repos!#
 	<!-- VNC Ports to Open - Not yet user-selectable. -->
 	<input type="hidden" name="anvil_open_vnc_ports" id="anvil_open_vnc_ports" value="#!replace!anvil_open_vnc_ports!#" />
 	<!-- Machine UUIDs - Not yet user-selectable. -->
@@ -1454,6 +1457,7 @@
 					</td>
 				</tr>
 				<!-- ricci password -->
+				<!-- Setting this to always be root's PW
 				<tr>
 					<td class="highlight_ready" style="border: 0px; text-align: right;">
 						#!string!row_0024!#:
@@ -1468,13 +1472,15 @@
 						<a href="https://alteeve.ca/w/AN!Cluster_Tutorial_2#Setting_up_ricci" target="_new">#!string!button_0003!#</a>,<br />
 					</td>
 				</tr>
+				-->
+				<input type="hidden" name="#!replace!cluster_ricci_pw_name!#" id="#!replace!cluster_ricci_pw_id!#" value="#!replace!cluster_root_pw_value!#"/>
 				<!-- root password -->
 				<tr>
 					<td class="highlight_ready" style="border: 0px; text-align: right;">
 						#!string!row_0025!#:
 					</td>
 					<td style="border: 0px; text-align: left;">
-						<input type="password" name="#!replace!cluster_root_pw_name!#" id="#!replace!cluster_root_pw_id!#" value="#!replace!cluster_root_pw_value!#" style="width: 300px;" tabindex="6">
+						<input type="text" name="#!replace!cluster_root_pw_name!#" id="#!replace!cluster_root_pw_id!#" value="#!replace!cluster_root_pw_value!#" style="width: 300px;" tabindex="6">
 					</td>
 					<td style="text-align: left;">
 						#!string!explain_0006!#<br />
