--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -594,6 +594,7 @@
 		</td>
 	</tr>
 	<!-- Storage Pool 1 -->
+	<!-- Disables now, all storage is 100% to Pool 1 
 	<tr>
 		<td class="highlight_good_bold">
 			#!string!row_0213!#
@@ -605,7 +606,9 @@
 			&nbsp;
 		</td>
 	</tr>
+	-->
 	<!-- Storage Pool 2 -->
+	<!-- 
 	<tr>
 		<td class="highlight_good_bold">
 			#!string!row_0214!#
@@ -617,6 +620,7 @@
 			&nbsp;
 		</td>
 	</tr>
+	-->
 	<!-- NTP servers -->
 	<tr>
 		<td class="highlight_good_bold">
