--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -366,6 +366,7 @@
 			&nbsp;
 		</td>
 	</tr>
+	<!-- Disabled
 	<tr>
 		<td rowspan="4" class="highlight_ready_bold">
 			#!string!row_0231!#
@@ -415,6 +416,7 @@
 			&nbsp;
 		</td>
 	</tr>
+	-->
 	<tr>
 		<td rowspan="3" class="highlight_ready_bold">
 			#!string!row_0234!#
