--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -735,7 +735,7 @@
 			#!replace!selects!#
 		</td>
 		<td class="subtle_text">
-			#!string!explain_0033!#<br />
+			<!-- #!string!explain_0033!#<br /> -->
 			#!string!explain_0034!#<br />
 		</td>
 	</tr>
