* This makes it so that, when loading an Install Manifest with recorded MAC addresses, those addresses are retained when the new derivative Install Manifest is created.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -928,18 +928,30 @@
 						<input type="hidden" name="anvil_password"               id="anvil_password"               value="#!replace!anvil_password!#" />
 						<input type="hidden" name="anvil_node1_name"             id="anvil_node1_name"             value="#!replace!anvil_node1_name!#" />
 						<input type="hidden" name="anvil_node1_bcn_ip"           id="anvil_node1_bcn_ip"           value="#!replace!anvil_node1_bcn_ip!#" />
+						<input type="hidden" name="anvil_node1_bcn_link1_mac"    id="anvil_node1_bcn_link1_mac"    value="#!replace!anvil_node1_bcn_link1_mac!#" />
+						<input type="hidden" name="anvil_node1_bcn_link2_mac"    id="anvil_node1_bcn_link2_mac"    value="#!replace!anvil_node1_bcn_link2_mac!#" />
 						<input type="hidden" name="anvil_node1_ipmi_ip"          id="anvil_node1_ipmi_ip"          value="#!replace!anvil_node1_ipmi_ip!#" />
 						<input type="hidden" name="anvil_node1_sn_ip"            id="anvil_node1_sn_ip"            value="#!replace!anvil_node1_sn_ip!#" />
+						<input type="hidden" name="anvil_node1_sn_link1_mac"     id="anvil_node1_sn_link1_mac"     value="#!replace!anvil_node1_sn_link1_mac!#" />
+						<input type="hidden" name="anvil_node1_sn_link2_mac"     id="anvil_node1_sn_link2_mac"     value="#!replace!anvil_node1_sn_link2_mac!#" />
 						<input type="hidden" name="anvil_node1_ifn_ip"           id="anvil_node1_ifn_ip"           value="#!replace!anvil_node1_ifn_ip!#" />
+						<input type="hidden" name="anvil_node1_ifn_link1_mac"    id="anvil_node1_ifn_link1_mac"    value="#!replace!anvil_node1_ifn_link1_mac!#" />
+						<input type="hidden" name="anvil_node1_ifn_link2_mac"    id="anvil_node1_ifn_link2_mac"    value="#!replace!anvil_node1_ifn_link2_mac!#" />
 						<input type="hidden" name="anvil_node1_pdu1_outlet"      id="anvil_node1_pdu1_outlet"      value="#!replace!anvil_node1_pdu1_outlet!#" />
 						<input type="hidden" name="anvil_node1_pdu2_outlet"      id="anvil_node1_pdu2_outlet"      value="#!replace!anvil_node1_pdu2_outlet!#" />
 						<input type="hidden" name="anvil_node1_pdu3_outlet"      id="anvil_node1_pdu3_outlet"      value="#!replace!anvil_node1_pdu3_outlet!#" />
 						<input type="hidden" name="anvil_node1_pdu4_outlet"      id="anvil_node1_pdu4_outlet"      value="#!replace!anvil_node1_pdu4_outlet!#" />
 						<input type="hidden" name="anvil_node2_name"             id="anvil_node2_name"             value="#!replace!anvil_node2_name!#" />
 						<input type="hidden" name="anvil_node2_bcn_ip"           id="anvil_node2_bcn_ip"           value="#!replace!anvil_node2_bcn_ip!#" />
+						<input type="hidden" name="anvil_node2_bcn_link1_mac"    id="anvil_node2_bcn_link1_mac"    value="#!replace!anvil_node2_bcn_link1_mac!#" />
+						<input type="hidden" name="anvil_node2_bcn_link2_mac"    id="anvil_node2_bcn_link2_mac"    value="#!replace!anvil_node2_bcn_link2_mac!#" />
 						<input type="hidden" name="anvil_node2_ipmi_ip"          id="anvil_node2_ipmi_ip"          value="#!replace!anvil_node2_ipmi_ip!#" />
 						<input type="hidden" name="anvil_node2_sn_ip"            id="anvil_node2_sn_ip"            value="#!replace!anvil_node2_sn_ip!#" />
+						<input type="hidden" name="anvil_node2_sn_link1_mac"     id="anvil_node2_sn_link1_mac"     value="#!replace!anvil_node2_sn_link1_mac!#" />
+						<input type="hidden" name="anvil_node2_sn_link2_mac"     id="anvil_node2_sn_link2_mac"     value="#!replace!anvil_node2_sn_link2_mac!#" />
 						<input type="hidden" name="anvil_node2_ifn_ip"           id="anvil_node2_ifn_ip"           value="#!replace!anvil_node2_ifn_ip!#" />
+						<input type="hidden" name="anvil_node2_ifn_link1_mac"    id="anvil_node2_ifn_link1_mac"    value="#!replace!anvil_node2_ifn_link1_mac!#" />
+						<input type="hidden" name="anvil_node2_ifn_link2_mac"    id="anvil_node2_ifn_link2_mac"    value="#!replace!anvil_node2_ifn_link2_mac!#" />
 						<input type="hidden" name="anvil_node2_pdu1_outlet"      id="anvil_node2_pdu1_outlet"      value="#!replace!anvil_node2_pdu1_outlet!#" />
 						<input type="hidden" name="anvil_node2_pdu2_outlet"      id="anvil_node2_pdu2_outlet"      value="#!replace!anvil_node2_pdu2_outlet!#" />
 						<input type="hidden" name="anvil_node2_pdu3_outlet"      id="anvil_node2_pdu3_outlet"      value="#!replace!anvil_node2_pdu3_outlet!#" />
