* This adds support to Install Manifest for setting ETHTOOL_OPTS="" in ifcf-{bcn,sn,ifn}-link{1,2} files. Options can now be set in striker.conf using the variables: ** sys::install_manifest::default::bcn_ethtool_opts = x ** sys::install_manifest::default::sn_ethtool_opts  = x ** sys::install_manifest::default::ifn_ethtool_opts = x * For now, these variables are not setable when creating the Install Manifest from the WebUI, but then can be added after the fact as empty '<common><networks><{bcn,sn,ifn} ... ethtool_opts="" />' options are set. Existing install manifests can be edited to add this attribute if needed.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -916,10 +916,13 @@
 						<input type="hidden" name="anvil_media_library_unit"     id="anvil_media_library_unit"     value="#!replace!anvil_media_library_unit!#" />
 						<input type="hidden" name="anvil_storage_pool1_size"     id="anvil_storage_pool1_size"     value="#!replace!anvil_storage_pool1_size!#" />
 						<input type="hidden" name="anvil_storage_pool1_unit"     id="anvil_storage_pool1_unit"     value="#!replace!anvil_storage_pool1_unit!#" />
+						<input type="hidden" name="anvil_bcn_ethtool_opts"       id="anvil_bcn_ethtool_opts"       value="#!replace!anvil_bcn_ethtool_opts!#" />
 						<input type="hidden" name="anvil_bcn_network"            id="anvil_bcn_network"            value="#!replace!anvil_bcn_network!#" />
 						<input type="hidden" name="anvil_bcn_subnet"             id="anvil_bcn_subnet"             value="#!replace!anvil_bcn_subnet!#" />
+						<input type="hidden" name="anvil_sn_ethtool_opts"        id="anvil_sn_ethtool_opts"        value="#!replace!anvil_sn_ethtool_opts!#" />
 						<input type="hidden" name="anvil_sn_network"             id="anvil_sn_network"             value="#!replace!anvil_sn_network!#" />
 						<input type="hidden" name="anvil_sn_subnet"              id="anvil_sn_subnet"              value="#!replace!anvil_sn_subnet!#" />
+						<input type="hidden" name="anvil_ifn_ethtool_opts"       id="anvil_ifn_ethtool_opts"       value="#!replace!anvil_ifn_ethtool_opts!#" />
 						<input type="hidden" name="anvil_ifn_network"            id="anvil_ifn_network"            value="#!replace!anvil_ifn_network!#" />
 						<input type="hidden" name="anvil_ifn_subnet"             id="anvil_ifn_subnet"             value="#!replace!anvil_ifn_subnet!#" />
 						<input type="hidden" name="anvil_prefix"                 id="anvil_prefix"                 value="#!replace!anvil_prefix!#" />
