* Created setuid c-wrappers for and added hooks into Striker to call the new striker-configure-vmm and striker-merge-dashboards tools. * Create a 'sync_with_peer' function in Cluster.pm to call the new tools, if appropriate.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -1800,6 +1800,20 @@
 	</tr>
 <!-- end general-row-good -->
 
+<!-- start general-table-good -->
+<table>
+	<tr>
+		<td class="highlight_good">
+			#!replace!row!#
+		</td>
+		<td style="text-align: left;">
+			#!replace!message!#<br />
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end general-table-row-good -->
+
 <!-- start open-form-table -->
 <table class="hidden_table">
 	<form action="#!replace!form_file!#" method="post" name="config">
