--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -763,6 +763,13 @@
 			<input type="hidden" name="anvil_striker2_password" value="#!replace!anvil_striker2_password!#" />
 			<input type="hidden" name="anvil_striker2_database" value="#!replace!anvil_striker2_database!#" />
 			<input type="hidden" name="anvil_mtu_size" value="#!replace!anvil_mtu_size!#" />
+			
+			<input type="hidden" name="anvil_bcn_ethtool_opts"  id="anvil_bcn_ethtool_opts"  value="#!replace!anvil_bcn_ethtool_opts!#" />
+			<input type="hidden" name="anvil_bcn_network"       id="anvil_bcn_network"       value="#!replace!anvil_bcn_network!#" />
+			<input type="hidden" name="anvil_sn_ethtool_opts"   id="anvil_sn_ethtool_opts"   value="#!replace!anvil_sn_ethtool_opts!#" />
+			<input type="hidden" name="anvil_sn_network"        id="anvil_sn_network"        value="#!replace!anvil_sn_network!#" />
+			<input type="hidden" name="anvil_ifn_ethtool_opts"  id="anvil_ifn_ethtool_opts"  value="#!replace!anvil_ifn_ethtool_opts!#" />
+			<input type="hidden" name="anvil_ifn_network"       id="anvil_ifn_network"       value="#!replace!anvil_ifn_network!#" />
 		</td>
 	</tr>
 	<tr>
