* Fixed a bug in AN::Tools where the new location where '$an->data->{path}' was set was being clobbered when a user passed in a hash to use. * Changed AN::Data->hostname() to call the 'hostname' binary instead of reading in /etc/sysconfig/network to resolve permission issues and make it more portable. * Fixed AN::Tools->nice_exit() to properly copy $self to $an. * Cleaned up and fixed a few logging things. * Fixed issue #31 where editing an Anvil! caused the nodes to lose the ',' in striker.conf. * Fixed issue #31 where bare IPs could be added to striker.conf. * Fixed an issue with UTF8 encoding causing data being corrupted when editing an Anvil!. * Edited convert_text_to_html() to only replace 2+ spaces with ' &nbsp;' instead of all spaces. * Removed 'type="passowrd"' for the SMTP password field so that browsers won't keep asking if you want to save the password when you save/modify an Anvil! entry.
Signed-off-by: digimer <digimer@lemass.alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -1686,7 +1686,7 @@
 						#!string!row_0028!#
 					</td>
 					<td>
-						<input type="password" name="#!replace!smtp__password_name!#" id="#!replace!smtp__password_id!#" value="#!replace!smtp__password_value!#" style="width: 300px;" tabindex="17" />
+						<input type="text" name="#!replace!smtp__password_name!#" id="#!replace!smtp__password_id!#" value="#!replace!smtp__password_value!#" style="width: 300px;" tabindex="17" />
 					</td>
 					<td style="text-align: left;">
 						#!string!explain_0015!#<br />
