--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -301,8 +301,8 @@
 		<td>
 			&nbsp;
 		</td>
-		<td colspan="2" rowspan="5">
-			<input type="submit" name="change" value="#!string!button_0019!#" class="bold_button">
+		<td colspan="2" rowspan="#!replace!rowspan!#">
+			<input type="submit" name="change" value="#!string!button_0026!#" class="bold_button">
 		</td>
 	</tr>
 	<tr><td style="height:10px; padding:0px" colspan="3"></td></tr>
@@ -331,7 +331,7 @@
 			&nbsp;
 		</td>
 	</tr>
-	<tr><td style="height:10px; padding:0px" colspan="3"></td></tr>
+	#!replace!server_note!#
 	<tr>
 		<td colspan="4">
 			<input type="hidden" name="cluster" value="#!replace!anvil!#">
@@ -1376,6 +1376,21 @@
 		</td>
 	</tr>
 <!-- end start-server-show-guacamole-link -->
+
+<!-- start start-server-show-note -->
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0002!#
+		</td>
+		<td style="text-align: center;">
+			<span class="subtle_text_wrap">#!string!message_0086!#</span><br />
+			<textarea id="server_note" name="server_note" rows="8" cols="60">#!variable!server_note!#</textarea><br />
+			<span class="subtle_text_fixed_width">#!variable!modified_date!#<br />
+			<br />
+		</td>
+	</tr>
+	<tr><td style="height:10px; padding:0px" colspan="3"></td></tr>
+<!-- end start-server-show-note -->
 
 <!-- start start-server-footer -->
 	<tr>
