* Notes for servers are now working in Striker. This closes issue #18. * Added AN::Tools::Get->server_note() which takes a server's name and digs out it's note (if any) and returns a hash reference with 'note' and 'uuid' set (the uuid being 'shared' -> 'shared_uuid'). * Added AN::Tools::Get->server_uuid() that returns the UUID of a server. When passed 'anvil => X', digs out the info for that Anvil! and checks the nodes. Without 'anvil' being set, it checks locally and then it figured out who its peer is and checks there as well. If neither node (in either case) has the server listed in 'virsh', it then looks in the /shared/definitions/${server}.xml file. The searching is handled by AN::Tools::Get->server_xml(). * Added AN::Tools::Get->server_xml() which looks for the XML definition of server by checking first for a running server on either node (as above, passing 'anvil' tells it to look on a remote pair of nodes where without 'anvil' it looks locally and then on its peer). If the server is found on neither, it looks in the /shared/definitions/${server}.xml file. * Changed AN::Tools::Get->users_home() to use 'path::etc_passwd' instead of a static path to /etc/passwd. * Renamed AN::Tools::Get->anvil_details() to AN::Tools::Get->local_anvil_details(). * Created AN::Tools::Get->remote_anvil_details() that is similar to AN::Tools::Get->local_anvil_details() but takes an anvil! name and returns the member nodes and the password.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -59,6 +59,25 @@
 			<br />
 <!-- end server-poweroff-required-message -->
 
+<!-- start server-updated-note -->
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0083!#
+		</td>
+		<td>
+			<br />
+			#!string!message_0121!#<br />
+			<br />
+<!-- end server-updated-note -->
+
+<!-- start server-updated-note-no-hardware-changed -->
+			<br />
+			#!string!message_0126!#<br />
+			<br />
+<!-- end server-updated-note-no-hardware-changed -->
+
 <!-- start update-server-config-footer -->
 		</td>
 	</tr>
@@ -1384,8 +1403,8 @@
 		</td>
 		<td style="text-align: center;">
 			<span class="subtle_text_wrap">#!string!message_0086!#</span><br />
-			<textarea id="server_note" name="server_note" rows="8" cols="60">#!variable!server_note!#</textarea><br />
-			<span class="subtle_text_fixed_width">#!variable!modified_date!#<br />
+			<textarea id="server_note" name="server_note" rows="8" cols="60">#!replace!server_note!#</textarea><br />
+			<span class="subtle_text_fixed_width">#!replace!modified_date!#<br />
 			<br />
 		</td>
 	</tr>
