* Reworked how the server delayed start function will work. The concept of "groups" was non-intuitive and have been removed. Now, a server can simply be said to start after another server on the Anvil! with a configurable delay. Setting the 'server_start_after' to a UUID that is all zeros will disable auto-booting in anvil-safe-start. Selecting which server is done via a selection box with an options for 'Do Not Boot' (which sets the all-0s UUID). * AN::Tools::DB->do_db_write() now checks to see if the new 'AN::Tools::Log->db_transactions()' is set and, if so, will log the DB transactions regardless of log levels. This is, in turn, enabled via 'X::log_db_transactions' where 'X' can be 'scancore' or one or more scan agents. Setting 'scancore' does NOT tell the agents to log their DB transactions!
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -1406,7 +1406,7 @@
 			#!string!row_0282!#
 		</td>
 		<td style="text-align: left;">
-			<input type="input" id="server_start_group" name="server_start_group" value="#!replace!server_start_group!#" style="width: 100px;"><br />
+			#!replace!server_start_after!#<br />
 			<span class="subtle_text">#!string!explain_0101!#</span>
 		</td>
 	</tr>
